--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
   },
   "dependencies": {
     "@metrostar/comet-data-viz": "1.1.1",
-    "@metrostar/comet-extras": "1.1.0",
+    "@metrostar/comet-extras": "1.2.0",
     "@metrostar/comet-uswds": "1.4.0",
     "@tanstack/react-query": "4.32.0",
+    "@tanstack/react-table": "8.9.3",
     "@types/keycloak-js": "^3.4.1",
     "@uswds/uswds": "3.6.0",
     "axios": "1.4.0",
