Undo api updates.

--- a/api/config.yml
+++ b/api/config.yml
@@ -1,22 +1,6 @@
-# Allow documents to be indexed
-writable: True
+# config.yml
+writable: true
 
-# Content is required for extractor pipeline
 embeddings:
-  content: True
-
-extractor:
-  path: google/flan-t5-base
-
-workflow:
-  search:
-    tasks:
-      - task: extractor
-        template: |
-          Answer the following question using the provided context.
-
-          Question:
-          {text}
-
-          Context:
-        action: extractor
+  path: sentence-transformers/nli-mpnet-base-v2
+  content: true
