--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,7 @@ server {
   }
 
   location /api {
-    proxy_pass https://ca-txtai-api.greensand-19f121e4.eastus.azurecontainerapps.io;
+    proxy_pass https://ca-horizon-hunt-api.greensand-19f121e4.eastus.azurecontainerapps.io/api;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
