--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios-mock-adapter": "1.21.5",
     "oidc-client-ts": "^2.2.5",
     "react": "18.2.0",
+    "react-avatar": "^5.0.3",
     "react-dom": "18.2.0",
     "react-hook-form": "7.45.2",
     "react-oidc-context": "^2.2.2",
