--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@azure/msal-browser": "^3.13.0",
+    "@azure/msal-react": "^2.0.15",
     "@metrostar/comet-data-viz": "1.1.3",
     "@metrostar/comet-extras": "1.3.2",
     "@metrostar/comet-uswds": "2.0.3",
@@ -34,12 +36,10 @@
     "@uswds/uswds": "3.7.1",
     "axios": "1.6.8",
     "axios-mock-adapter": "1.22.0",
-    "oidc-client-ts": "^3.0.1",
     "react": "18.2.0",
     "react-avatar": "^5.0.3",
     "react-dom": "18.2.0",
     "react-hook-form": "7.51.2",
-    "react-oidc-context": "^3.0.0",
     "react-router-dom": "6.22.3",
     "recoil": "0.7.7"
   },
