--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "format": "npx prettier src --write",
@@ -29,10 +29,10 @@
     "@azure/msal-browser": "^3.13.0",
     "@azure/msal-react": "^2.0.15",
     "@metrostar/comet-data-viz": "1.1.3",
-    "@metrostar/comet-extras": "1.3.2",
-    "@metrostar/comet-uswds": "2.0.3",
+    "@metrostar/comet-extras": "1.3.4",
+    "@metrostar/comet-uswds": "2.0.4",
     "@tanstack/react-query": "5.28.9",
-    "@tanstack/react-table": "8.11.7",
+    "@tanstack/react-table": "8.16.0",
     "@uswds/uswds": "3.7.1",
     "axios": "1.6.8",
     "axios-mock-adapter": "1.22.0",
