--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@azure/msal-browser": "^3.13.0",
-    "@azure/msal-react": "^2.0.15",
+    "@azure/msal-browser": "2.38.4",
+    "@azure/msal-react": "1.5.13",
     "@metrostar/comet-data-viz": "1.1.3",
     "@metrostar/comet-extras": "1.3.4",
     "@metrostar/comet-uswds": "2.0.4",
