Misc cleanup and refactoring.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "comet-starter",
+  "name": "2024-intern-main",
   "private": true,
   "version": "1.0.0",
   "description": "React and TypeScript starter app, pre-configured with the Comet component library and other tools.",
