--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-avatar": "^5.0.3",
     "react-dom": "18.2.0",
     "react-hook-form": "7.51.2",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "6.22.3",
     "recoil": "0.7.7"
   },
