--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@metrostar/comet-data-viz": "1.1.3",
     "@metrostar/comet-extras": "1.3.4",
     "@metrostar/comet-uswds": "2.0.4",
+    "@microsoft/teams-js": "^2.26.0",
     "@tanstack/react-query": "5.28.9",
     "@tanstack/react-table": "8.16.0",
     "@uswds/uswds": "3.7.1",
