--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "react-hook-form": "7.51.2",
     "react-markdown": "^9.0.1",
     "react-router-dom": "6.22.3",
-    "recoil": "0.7.7"
+    "react-type-animation": "^3.2.0",
+    "react-typed": "^2.0.12",
+    "recoil": "0.7.7",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "7.24.3",
