initial commit for new repo

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
   "recommendations": [
+    "ms-azuretools.vscode-azurefunctions",
     "mgmcdermott.vscode-language-babel",
     "editorconfig.editorconfig",
     "irongeek.vscode-env",
