--- a/package.json
+++ b/package.json
@@ -1,16 +1,8 @@
 {
-  "name": "2024-intern-main",
-  "private": true,
+  "name": "comet-starter",
   "version": "1.0.0",
-  "description": "React and TypeScript starter app, pre-configured with the Comet component library and other tools.",
+  "description": "React and TypeScript Copilot app, pre-configured with the Comet component library and other tools.",
   "license": "Apache-2.0",
-  "keywords": [
-    "uswds",
-    "react",
-    "components",
-    "comet",
-    "open source"
-  ],
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -18,73 +10,74 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "format": "npx prettier src --write",
-    "test": "jest",
-    "coverage": "jest --coverage",
-    "e2e": "npx cypress open",
-    "e2e:format": "npx prettier cypress --write",
-    "e2e:ci": "npx cypress run",
-    "prepare": "husky install"
+    "predeploy": "vite build --base=/comet-chatbot/",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@azure/msal-browser": "2.38.4",
-    "@azure/msal-react": "1.5.13",
-    "@metrostar/comet-data-viz": "1.1.3",
-    "@metrostar/comet-extras": "1.3.4",
-    "@metrostar/comet-uswds": "2.0.4",
-    "@microsoft/teams-js": "^2.26.0",
-    "@tanstack/react-query": "5.28.9",
-    "@tanstack/react-table": "8.16.0",
+    "@azure/functions": "^3.2.0",
+    "@azure/msal-browser": "^3.22.0",
+    "@azure/msal-react": "^2.1.1",
+    "@metrostar/comet-extras": "1.3.1",
+    "@metrostar/comet-uswds": "2.0.2",
+    "@microsoft/teams-js": "^2.27.0",
+    "@tanstack/react-query": "5.18.1",
+    "@testing-library/react": "^16.3.0",
     "@uswds/uswds": "3.7.1",
-    "axios": "1.6.8",
+    "axios": "^1.7.2",
     "axios-mock-adapter": "1.22.0",
+    "cors": "^2.8.5",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
-    "react-avatar": "^5.0.3",
     "react-dom": "18.2.0",
-    "react-hook-form": "7.51.2",
-    "react-markdown": "^9.0.1",
-    "react-router-dom": "6.22.3",
+    "react-hook-form": "7.50.0",
+    "react-oidc-context": "^2.3.1",
+    "react-responsive": "^10.0.0",
+    "react-router-dom": "^6.21.3",
+    "react-toggle": "^4.1.3",
     "react-type-animation": "^3.2.0",
     "react-typed": "^2.0.12",
     "recoil": "0.7.7",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "7.24.3",
-    "@babel/preset-react": "7.24.1",
-    "@babel/preset-typescript": "7.24.1",
-    "@testing-library/jest-dom": "6.4.2",
-    "@testing-library/react": "14.2.2",
-    "@testing-library/user-event": "14.5.2",
-    "@types/jest": "^29.5.12",
+    "@babel/preset-env": "7.23.9",
+    "@babel/preset-react": "7.23.3",
+    "@babel/preset-typescript": "7.23.3",
+    "@types/jquery": "^3.5.30",
+    "@types/mocha": "^10.0.10",
+    "@types/node-fetch": "^2.6.11",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
-    "@typescript-eslint/eslint-plugin": "7.4.0",
-    "@typescript-eslint/parser": "7.4.0",
+    "@types/react-toggle": "^4.0.5",
+    "@types/use-persisted-state": "^0.3.4",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "6.19.1",
+    "@typescript-eslint/parser": "6.19.1",
     "@vitejs/plugin-react": "4.2.1",
-    "autoprefixer": "^10.4.19",
-    "axe-core": "4.9.0",
-    "cypress": "13.7.1",
-    "cypress-axe": "1.5.0",
-    "eslint": "8.57.0",
+    "autoprefixer": "^10.4.16",
+    "cypress": "^14.3.0",
+    "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-react-refresh": "0.4.6",
-    "husky": "9.0.11",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
-    "jest-transform-stub": "2.0.0",
-    "lint-staged": "15.2.2",
-    "prettier": "3.2.5",
+    "eslint-plugin-react-refresh": "0.4.5",
+    "gh-pages": "^6.1.1",
+    "lint-staged": "^15.2.10",
+    "prettier": "3.0.0",
     "prettier-plugin-organize-imports": "3.2.4",
-    "sass": "1.72.0",
-    "ts-jest": "29.1.2",
+    "sass": "1.70.0",
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.4.3",
-    "vite": "5.2.7",
+    "typescript": "5.1.6",
+    "vite": "^5.0.12",
     "vite-plugin-environment": "1.1.3",
     "vite-plugin-eslint": "1.8.1",
-    "vite-tsconfig-paths": "4.3.2"
+    "vite-tsconfig-paths": "4.3.1"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.6"
+  },
+  "overrides": {
+    "xml2js": "0.6.2"
   }
 }
