--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,17 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
+  # Serve static files (images, css, js, etc.) directly
+  location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot|otf|webp)$ {
+    try_files $uri =404;
+    access_log off;
+    expires max;
+  }
+
+  # Let SPA routes fall back to index.html
   location / {
-    try_files $uri /index.html;
+    try_files $uri $uri/ /index.html;
   }
 }
+
+
