--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "preview": "vite preview",
     "format": "npx prettier src --write",
     "predeploy": "vite build --base=/comet-chatbot/",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "test": "jest",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@azure/functions": "^3.2.0",
@@ -43,8 +45,12 @@
     "@babel/preset-env": "7.23.9",
     "@babel/preset-react": "7.23.3",
     "@babel/preset-typescript": "7.23.3",
+    "@eslint/js": "^9.25.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@types/jest": "^29.5.14",
     "@types/jquery": "^3.5.30",
     "@types/mocha": "^10.0.10",
+    "@types/node": "^22.14.1",
     "@types/node-fetch": "^2.6.11",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
@@ -56,28 +62,40 @@
     "@vitejs/plugin-react": "4.2.1",
     "autoprefixer": "^10.4.16",
     "cypress": "^14.3.0",
-    "eslint": "8.56.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.5",
     "gh-pages": "^6.1.1",
-    "lint-staged": "^15.2.10",
+    "globals": "^16.0.0",
+    "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.5.1",
     "prettier": "3.0.0",
     "prettier-plugin-organize-imports": "3.2.4",
     "sass": "1.70.0",
+    "ts-jest": "^29.3.2",
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
     "typescript": "5.1.6",
+    "typescript-eslint": "^8.30.1",
     "vite": "^5.0.12",
     "vite-plugin-environment": "1.1.3",
     "vite-plugin-eslint": "1.8.1",
-    "vite-tsconfig-paths": "4.3.1"
+    "vite-tsconfig-paths": "4.3.1",
+    "vitest": "^3.1.1"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "4.9.6"
   },
   "overrides": {
     "xml2js": "0.6.2"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": "eslint --fix",
+    "**/*.{json,css,md}": "prettier --write"
   }
 }
