--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint src --ext .js,.ts,.tsx",
     "preview": "vite preview",
     "format": "npx prettier src --write",
     "predeploy": "vite build --base=/comet-chatbot/",
@@ -63,9 +63,10 @@
     "@vitejs/plugin-react": "4.2.1",
     "autoprefixer": "^10.4.16",
     "cypress": "^14.3.0",
-    "eslint": "^8.57.1",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-prettier": "5.1.3",
+    "eslint-define-config": "^2.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.5",
@@ -76,19 +77,20 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.5.1",
-    "prettier": "3.0.0",
+    "prettier": "^3.0.0",
     "prettier-plugin-organize-imports": "3.2.4",
     "sass": "1.70.0",
     "ts-jest": "^29.3.2",
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.1.6",
+    "typescript": "^5.1.6",
     "typescript-eslint": "^8.30.1",
     "vite": "^5.0.12",
     "vite-plugin-environment": "1.1.3",
     "vite-plugin-eslint": "1.8.1",
     "vite-tsconfig-paths": "4.3.1",
-    "vitest": "^3.1.1"
+    "vitest": "^3.1.1",
+    "whatwg-fetch": "^3.6.20"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "4.9.6"
