--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 API_BASE_URL=/api
 API_KEY=Bearer 5wKEL3TxvNP6UI54WQF4vND3LI7rY8Ct
-SSO_CLIENT_ID=b0c2fb79-c5c7-4226-80d3-276ae2672d8f
-SSO_TENANT_ID=399ed244-adb0-4a01-91a2-898d9918314a
+#SSO_CLIENT_ID=b0c2fb79-c5c7-4226-80d3-276ae2672d8f
+#SSO_TENANT_ID=399ed244-adb0-4a01-91a2-898d9918314a
 #connects the backend
 VITE_API_BASE_URL=https://copilot-functions.azurewebsites.net/api
 
