--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@azure/functions": "^3.2.0",
     "@azure/msal-browser": "^3.22.0",
+    "@azure/msal-node": "^3.5.1",
     "@azure/msal-react": "^2.1.1",
     "@metrostar/comet-extras": "1.3.1",
     "@metrostar/comet-uswds": "2.0.2",
